test/asm/nested-brackets.err
error: Missing '}'
    at nested-brackets.asm(5)
Assembly aborted with 1 error!
